US58150:PIP Layout: remote/self view Stretch fix - initial change

--- a/docroot/react/src/views/secure/visit/conference/conference.less
+++ b/docroot/react/src/views/secure/visit/conference/conference.less
@@ -340,7 +340,7 @@
             }
             .stream-containerPIP {
                 width:100%;
-                transform: scaleX(1.65);
+                transform: scale(1.5);
             }
             //As in flip view remote feed becomes self view so we don not need to scale the video up.
             .flipStream-containerPIP {
@@ -389,7 +389,7 @@
             
             .stream-containerPIP {
                 width:100%;
-                transform: scaleX(1.44);
+                transform: scale(1.2);
             }
 
             //As in flip view remote feed becomes self view so we don not need to scale the video up.
@@ -483,7 +483,7 @@
 
             .stream-containerPIP{
                 width:100%;
-                transform: scaleX(1.6);
+                transform: scale(1.5);
             }
             //As in flip view remote becomes self view so we don not need to scale the video up.
             .flipStream-containerPIP{ 
@@ -499,7 +499,7 @@
 
             .stream-containerPIP{
                 width:100%;
-                transform: scaleX(1.24);
+                transform: scale(1.2);
             }
             
             //As in flip view remote feed becomes self view so we don not need to scale the video up.
